--- a/src/app/auth/login.component.html
+++ b/src/app/auth/login.component.html
@@ -10,6 +10,7 @@
             [(ngModel)]="username"
             [placeholder]="'AUTH.USERNAME' | translate"
             autofocus
+            minlength="1"
             required
             #usernameControl="ngModel"
           />
@@ -25,6 +26,7 @@
             name="password"
             [(ngModel)]="password"
             [placeholder]="'AUTH.PASSWORD' | translate"
+            minlength="1"
             required
             #passwordControl="ngModel"
           />
