--- a/src/app/settings/containers/settings/settings.component.html
+++ b/src/app/settings/containers/settings/settings.component.html
@@ -10,6 +10,12 @@
       <mat-button-toggle [value]="viewModeList.VmPreferences">
         {{ 'SETTINGS.VM_PREFERENCES.TITLE' | translate }}
       </mat-button-toggle>
+      <mat-button-toggle [value]="viewModeList.AccountTags">
+        {{ 'SETTINGS.ACCOUNT_TAGS.TITLE' | translate }}
+      </mat-button-toggle>
+      <mat-button-toggle [value]="viewModeList.UserTags">
+        {{ 'SETTINGS.USER_TAGS.TITLE' | translate }}
+      </mat-button-toggle>
       <mat-button-toggle [value]="viewModeList.LookAndFeel">
         {{ 'SETTINGS.LOOK_AND_FEEL.TITLE' | translate }}
       </mat-button-toggle>
@@ -39,6 +45,24 @@
     [settings]="settings$ | async"
     (keyboardLayoutChange)="onKeyboardLayoutChange($event)"
   ></cs-vm-settings>
+  <cs-tags-settings
+    *ngIf="viewMode === viewModeList.AccountTags"
+    [tagPage]="viewModeList.AccountTags"
+    [tags]="accountTags$ | async"
+    [isLoading]="accountTagIsLoading$ | async"
+    (addTag)="onAddAccountTag($event)"
+    (deleteTag)="onDeleteAccountTag($event)"
+    (editTag)="onEditAccountTag($event)"
+  ></cs-tags-settings>
+  <cs-tags-settings
+    *ngIf="viewMode === viewModeList.UserTags"
+    [tagPage]="viewModeList.UserTags"
+    [tags]="userTags$ | async"
+    [isLoading]="userTagsIsLoading$ | async"
+    (addTag)="onAddUserTag($event)"
+    (deleteTag)="onDeleteUserTag($event)"
+    (editTag)="onEditUserTag($event)"
+  ></cs-tags-settings>
   <cs-interface-settings
     *ngIf="viewMode === viewModeList.LookAndFeel"
     [settings]="settings$ | async"
