feat(resource-quotas): admin and user interface (#1532)
PR close #1458

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,8 +13,6 @@
       [subroutes]="subroutes$ | async"
       (menuButtonClicked)="openAppNav()"
     ></cs-section-nav>
-    <div class="primary-content">
-      <router-outlet></router-outlet>
-    </div>
+    <div class="primary-content"><router-outlet></router-outlet></div>
   </mat-sidenav-content>
 </mat-sidenav-container>
