--- a/src/app/security-group/sg-sidebar/sg-details/security-group-details.component.html
+++ b/src/app/security-group/sg-sidebar/sg-details/security-group-details.component.html
@@ -2,9 +2,7 @@
   <mat-card>
     <mat-card-header>
       <mat-card-title>
-        <h2 class="mat-card-title-text">
-          {{ 'SECURITY_GROUP_PAGE.DETAILS.TITLE' | translate }}
-        </h2>
+        <h2 class="mat-card-title-text">{{ 'SECURITY_GROUP_PAGE.DETAILS.TITLE' | translate }}</h2>
       </mat-card-title>
     </mat-card-header>
     <mat-card-content>
