--- a/src/app/shared/components/notification-box/notification-box.component.html
+++ b/src/app/shared/components/notification-box/notification-box.component.html
@@ -20,9 +20,7 @@
   <mat-card class="mat-elevation-z4">
     <mat-card-header class="mat-card-header">
       <mat-card-title>
-        <h2 class="mat-card-title-text">
-          {{ 'NOTIFICATIONS.PENDING_OPERATIONS' | translate }}
-        </h2>
+        <h2 class="mat-card-title-text">{{ 'NOTIFICATIONS.PENDING_OPERATIONS' | translate }}</h2>
       </mat-card-title>
     </mat-card-header>
     <mat-list>
