--- a/src/app/shared/components/top-bar/top-bar.component.html
+++ b/src/app/shared/components/top-bar/top-bar.component.html
@@ -1,7 +1,5 @@
 <div class="top-bar">
-  <div class="top-bar-content">
-    <ng-content></ng-content>
-  </div>
+  <div class="top-bar-content"><ng-content></ng-content></div>
   <cs-notification-box
     class="top-bar-notifications"
     [style.right.px]="rightIndent"
