--- a/src/app/vm-logs/invalidate-vm-logs-token/invalidate-vm-logs-token.component.html
+++ b/src/app/vm-logs/invalidate-vm-logs-token/invalidate-vm-logs-token.component.html
@@ -15,15 +15,8 @@
   </mat-dialog-content>
 
   <div class="mat-dialog-actions">
-    <button mat-button color="primary" matDialogClose>
-      {{ 'COMMON.CANCEL' | translate }}
-    </button>
-    <button
-      mat-button
-      type="submit"
-      color="primary"
-      [disabled]="tokenForm.invalid"
-    >
+    <button mat-button color="primary" matDialogClose>{{ 'COMMON.CANCEL' | translate }}</button>
+    <button mat-button type="submit" color="primary" [disabled]="tokenForm.invalid">
       {{ 'LOGS_PAGE.TOKEN.INVALIDATE' | translate }}
     </button>
   </div>
