--- a/src/app/vm/vm-page/vm-page.component.html
+++ b/src/app/vm/vm-page/vm-page.component.html
@@ -13,11 +13,8 @@
   </ng-container>
 
   <ng-container cs-list>
-
     <div class="switch-panel">
-      <cs-view-mode-switch
-        (modeChanged)="changeMode($event)"
-        [key]="viewModeKey">
+      <cs-view-mode-switch (modeChanged)="changeMode($event)" [key]="viewModeKey">
       </cs-view-mode-switch>
     </div>
     <cs-vm-list
@@ -33,8 +30,6 @@
     </cs-vm-list>
   </ng-container>
   <ng-container cs-sidebar>
-    <cs-sidebar [isOpen]="listService?.hasSelected()">
-      <router-outlet></router-outlet>
-    </cs-sidebar>
+    <cs-sidebar [isOpen]="listService?.hasSelected()"> <router-outlet></router-outlet> </cs-sidebar>
   </ng-container>
 </cs-list>
