fix(login): disable login button when Username or Password or both are empty

--- a/src/app/auth/login.component.html
+++ b/src/app/auth/login.component.html
@@ -49,10 +49,7 @@
           mat-button
           color="primary"
           type="submit"
-          [disabled]="
-            (passwordControl.invalid && !passwordControl.pristine) ||
-            (usernameControl.invalid && !usernameControl.pristine)
-          "
+          [disabled]="passwordControl.invalid || usernameControl.invalid"
         >
           {{ 'AUTH.LOGIN' | translate }}
         </button>
