--- a/src/app/vm/vm-creation/api-log/vm-api-log.component.html
+++ b/src/app/vm/vm-creation/api-log/vm-api-log.component.html
@@ -22,7 +22,7 @@
         </tbody>
       </table>
     </div>
-    <mat-action-row>
+    <mat-card-actions>
       <button
         mat-icon-button
         ngxClipboard
@@ -33,6 +33,6 @@
       >
         <mat-icon class="mdi-content-copy"></mat-icon>
       </button>
-    </mat-action-row>
+    </mat-card-actions>
   </mat-expansion-panel>
 </mat-accordion>
