--- a/src/app/vm/vm-creation/vm-creation.component.scss
+++ b/src/app/vm/vm-creation/vm-creation.component.scss
@@ -16,7 +16,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 50vh;
+  height: 60vh;
+  max-height: 60vh;
 
   .message {
     position: static;
