--- a/src/app/vm/vm-creation/vm-creation.component.html
+++ b/src/app/vm/vm-creation/vm-creation.component.html
@@ -1,13 +1,14 @@
 <ng-container *ngIf="showOverlay">
-  <mat-dialog-content>
+  <div mat-dialog-content>
     <div class="overlay message">
       <div class="overlay-content">
-        <cs-progress-logger [messages]="loggerStageList"></cs-progress-logger>
-
-        <mat-progress-bar
-          mode="indeterminate"
-          [class.progress-hidden]="!deploymentInProgress"
-        ></mat-progress-bar>
+        <div>
+          <cs-progress-logger [messages]="loggerStageList"></cs-progress-logger>
+          <mat-progress-bar
+            mode="indeterminate"
+            [class.progress-hidden]="!deploymentInProgress"
+          ></mat-progress-bar>
+        </div>
 
         <cs-vm-api-log *ngIf="isError"></cs-vm-api-log>
 
@@ -20,18 +21,18 @@
         </cs-postdeployment-dialog>
       </div>
     </div>
-  </mat-dialog-content>
 
-  <div class="mat-dialog-actions">
-    <button
-      mat-button
-      type="button"
-      color="primary"
-      *ngIf="!deploymentInProgress && !deployedVm"
-      (click)="vmDeploymentFailed.emit()"
-    >
-      {{ 'COMMON.CLOSE' | translate }}
-    </button>
+    <div class="mat-dialog-actions">
+      <button
+        mat-button
+        type="button"
+        color="primary"
+        *ngIf="!deploymentInProgress && !deployedVm"
+        (click)="vmDeploymentFailed.emit()"
+      >
+        {{ 'COMMON.CLOSE' | translate }}
+      </button>
+    </div>
   </div>
 </ng-container>
 
