--- a/src/app/vm/vm-creation/api-log/vm-api-log.component.html
+++ b/src/app/vm/vm-creation/api-log/vm-api-log.component.html
@@ -8,9 +8,9 @@
       <table class="mat-table">
         <thead>
           <tr>
-            <th class="mat-header-cell">REQUEST</th>
-            <th class="mat-header-cell">PARAMS</th>
-            <th class="mat-header-cell">RESPONSE</th>
+            <th class="mat-header-cell">{{ 'VM_PAGE.VM_CREATION.REQUEST' | translate }}</th>
+            <th class="mat-header-cell">{{ 'VM_PAGE.VM_CREATION.PARAMS' | translate }}</th>
+            <th class="mat-header-cell">{{ 'VM_PAGE.VM_CREATION.RESPONSE' | translate }}</th>
           </tr>
         </thead>
         <tbody>
