--- a/src/app/support/support-information.component.html
+++ b/src/app/support/support-information.component.html
@@ -1,11 +1,11 @@
-<div class="panel-wrapper">
-  <mat-accordion *ngIf="isShow">
-    <mat-expansion-panel>
-      <mat-expansion-panel-header>
-        <mat-panel-title> {{ 'ERRORS.SUPPORT_INFORMATION' | translate }} </mat-panel-title>
-      </mat-expansion-panel-header>
+<div class="panel-wrapper" *ngIf="isShow">
+  <mat-expansion-panel>
+    <mat-expansion-panel-header>
+      <mat-panel-title> {{ 'ERRORS.SUPPORT_INFORMATION' | translate }} </mat-panel-title>
+    </mat-expansion-panel-header>
 
+    <ng-template matExpansionPanelContent>
       <div [innerHTML]="supportInformation"></div>
-    </mat-expansion-panel>
-  </mat-accordion>
+    </ng-template>
+  </mat-expansion-panel>
 </div>
