fix(pulse-plugin): fixed shift value change emit (#1559)

--- a/src/app/pulse/charts/aggregation-selector.component.html
+++ b/src/app/pulse/charts/aggregation-selector.component.html
@@ -30,7 +30,7 @@
     value="0"
     [min]="0"
     [csMinValue]="0"
-    (input)="handleShiftAmountChange($event)"
+    (ngModelChange)="handleShiftAmountChange($event)"
   />
 </mat-form-field>
 <mat-form-field class="aggregation-select shift-select">
