--- a/src/app/pulse/charts/chart-area.component.html
+++ b/src/app/pulse/charts/chart-area.component.html
@@ -1,9 +1,9 @@
 <div *ngIf="!hasDatasets(charts[0]) || error" class="no-charts">
   <img src="img/no-charts.svg" alt="" />
   <mat-spinner *ngIf="fetching" [diameter]="50" [strokeWidth]="5"></mat-spinner>
-  <span *ngIf="!fetching && !error && !hasDatasets(charts[0])">{{
-    'PULSE.SELECT_DATA' | translate
-  }}</span>
+  <span *ngIf="!fetching && !error && !hasDatasets(charts[0])">
+    {{ 'PULSE.SELECT_DATA' | translate }}
+  </span>
   <span *ngIf="!fetching && error">{{ 'PULSE.ERROR' | translate }}</span>
 </div>
 <div *ngIf="fetching && hasDatasets(charts[0])" class="overlay">
