fix(vm): do not show copy when no userdata ans style fixes (#1461)

--- a/src/app/vm/vm-sidebar/vm-detail/vm-user-data-dialog/vm-user-data-dialog.component.html
+++ b/src/app/vm/vm-sidebar/vm-detail/vm-user-data-dialog/vm-user-data-dialog.component.html
@@ -19,7 +19,7 @@
 
 <div class="mat-dialog-actions">
   <cs-clipboard-button
-    *ngIf="!isEditMode"
+    *ngIf="!isEditMode && form.controls['userdata'].value"
     [value]="form.controls['userdata'].value"
     tooltipPosition="below"
     cs-input-group-button
@@ -39,5 +39,5 @@
     {{ 'COMMON.SAVE' | translate }}
   </button>
 
-  <button mat-button matDialogClose color="primary">{{ 'COMMON.CANCEL' | translate }}</button>
+  <button mat-button matDialogClose color="primary">{{ 'COMMON.CLOSE' | translate }}</button>
 </div>
