--- a/src/app/vm/vm-sidebar/vm-detail/vm-user-data-dialog/vm-user-data-dialog.component.scss
+++ b/src/app/vm/vm-sidebar/vm-detail/vm-user-data-dialog/vm-user-data-dialog.component.scss
@@ -1,3 +1,13 @@
 .userdata-field {
   min-height: 20px;
 }
+
+.mat-dialog-content {
+  min-height: 57px;
+}
+
+.mat-dialog-actions {
+  cs-clipboard-button {
+    margin-right: 8px;
+  }
+}
