fix(vm): style fixes for copy button and for Safari (#1461)

--- a/src/app/vm/vm-sidebar/vm-detail/vm-user-data-dialog/vm-user-data-dialog.component.scss
+++ b/src/app/vm/vm-sidebar/vm-detail/vm-user-data-dialog/vm-user-data-dialog.component.scss
@@ -4,10 +4,13 @@
 
 .mat-dialog-content {
   min-height: 57px;
+  overflow: initial;
 }
 
 .mat-dialog-actions {
+  position: relative;
   cs-clipboard-button {
-    margin-right: 8px;
+    position: absolute;
+    left: 0;
   }
 }
