fix(sidenav): update sidenav state on backdrop click (#1616)

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<mat-sidenav-container fullscreen>
+<mat-sidenav-container fullscreen (backdropClick)="closeAppNav()">
   <mat-sidenav [opened]="showAppNav$ | async">
     <cs-app-nav
       [routes]="routes$ | async"
